--- a/Estudios.html
+++ b/Estudios.html
@@ -25,7 +25,7 @@
         <li>Bachiller en Economía y Administración de Empresas, Instituto Aukan (2017-2022).</li>
     </ul>
     <ul>Primarios:
-        <li>Educación realizada en el Instituto Club Atlético Lanús.</li>
+        <li>Educación realizada en el Instituto Club Atlético Lanús (2011-2016).</li>
     </ul>
 </div>
 </fieldset>
