--- a/ExperienciaLaboral.html
+++ b/ExperienciaLaboral.html
@@ -12,9 +12,10 @@
     <h2 class="title">Agustín López Díaz</h2></legend>
     <img class="imagen" src="image.jpg"><br>
     
+    <button class="boton1"><a href="index.html">Datos personales</a></button>
     <button class="boton1"><a href="Estudios.html">Estudios</a></button>
     <button class="boton1"><a href="CursosIdiomas.html">Conocimientos</a></button>
-    <button class="boton1"><a href="index.html">Datos personales</a></button>
+    <button class="boton1"><a href="ExperienciaLaboral.html">Experiencia Laboral</a></button>
       </div><br>
     <div class="contenido"><h1>Experiencia Laboral:</h1>
     <ul>
