--- a/Estudios.html
+++ b/Estudios.html
@@ -29,6 +29,9 @@
         <li>Educación realizada en el Instituto Club Atlético Lanús (2011-2016).</li>
     </ul>
 </div>
+<footer>
+    <p>Todos los derechos reservados.</p>
+</footer>
 </fieldset>
 </body>
 </html>
