--- a/ExperienciaLaboral.html
+++ b/ExperienciaLaboral.html
@@ -22,6 +22,9 @@
         <li>Nula, pero a pesar de eso estoy dispuesto a conocer y emprender nuevas experiencias.</li>
     </ul>
 </div>
+<footer>
+    <p>Todos los derechos reservados.</p>
+</footer>
 </fieldset>
 </body>
 </html>
