--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
         <li>Número de teléfono celular: +11 25886482</li>
     </ul>
 </div>
+<footer>
+    <p>Todos los derechos reservados.</p>
+</footer>
 </body>
 </html> 
